--- a/trunk/OsmNavigator/res/layout/main.xml
+++ b/trunk/OsmNavigator/res/layout/main.xml
@@ -5,13 +5,20 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    
+    <ImageView android:id="@+id/backgroundImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src ="@drawable/background_image"
+        android:layout_centerInParent="true"
+    />
+      
     <TextView  android:id="@+id/title"
         android:drawSelectorOnTop="true"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:text="@string/hello"
-        android:layout_centerInParent="true"
+        android:layout_centerInParent="false"
+        android:background = "@drawable/driving"
     />
     
     <Button android:id="@+id/ok" 
@@ -20,7 +27,7 @@
         android:layout_alignParentRight="false"
         android:text="Load Map" 
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10sp"
+        android:layout_below ="@id/backgroundImage"
     />
     
     
@@ -28,11 +35,8 @@
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:visible = "false"
-    android:text="@string/hello"
+    android:text=""
     />  
-    <ImageView android:id="@+id/backgroundImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src ="@drawable/icon2"
-    />
+    
+    
 </RelativeLayout >
