--- a/trunk/OsmNavigator/res/layout/main.xml
+++ b/trunk/OsmNavigator/res/layout/main.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/grey"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    
+   <com.android.OsmNavigator.OsmMapView
+    android:id="@+id/MAP"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/verde_erba"
+    />
+<RelativeLayout  
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+    
+    
+    
+    
     <ImageView android:id="@+id/backgroundImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,3 +54,4 @@
     
     
 </RelativeLayout >
+</FrameLayout>
