--- a/trunk/OsmNavigator/res/layout/main.xml
+++ b/trunk/OsmNavigator/res/layout/main.xml
@@ -6,8 +6,8 @@
     
    <com.android.OsmNavigator.OsmMapView
     android:id="@+id/MAP"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@color/verde_erba"
     />
 <RelativeLayout  
